--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-validator": "^0.14.1",
     "multer": "^1.4.5-lts.2",
     "multer-s3": "^3.0.1",
+    "nodejs": "^0.0.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
